Fixes spacing on Case Study page

--- a/styles/casestudy.css
+++ b/styles/casestudy.css
@@ -182,7 +182,7 @@ a.button {
     padding-top: 30px;
     padding-bottom: 5px;
     text-align: left;
-    width: 31.9%;
+    width: 30%;
 
 }
 
@@ -262,7 +262,7 @@ p.color-box {
   color: black;
   text-align: center;
   float: left;
-  width: 24.3%;
+  width: 23.5%;
 }
 
 img.beelogo {
